# bntech_virtual_scanner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.bat
docs/: PR02_page_size_design.md  Rotation_design.md  _config.yml  archive.md  categories.md  contact.md  devlog.md  faq.md  file_dpi_design.md  file_transfer_design.md  flip_design.md  flip_rotation_design.md  freeimage.md  gif_webp_design.md  i18n_design.md  image_source_design.md  implement_dpi_design.md  index.html  index.md  memory_design.md  msi_installer_design.md  native_transfer_design.md  pixel_type_design.md  preview_design.md  settings_UI_constrict_design.md  tags.md  twain.md  twain_ds.md  user-guide.md
docs/_layouts/: post.html
docs/assets/css/: style.scss
docs/posts/: 2016-05-25-hello-world.md
installer/: bntech_virtual_scanner.wxs  install_failure.vbs  install_success.vbs  language_dialog.vbs  uninstall_failure.vbs  uninstall_success.vbs
res/: settings.html  twain_ds.def  twain_ds.rc
src/: capability.cpp  capability.h  ds_entry.cpp  localization.cpp  localization.h  platform.h  resource.h  settings_server.cpp  settings_server.h  twain_data_source.cpp  twain_data_source.h  unit_convert.cpp  unit_convert.h  virtual_scanner.cpp  virtual_scanner.h
